--- a/lab7/app/views/layouts/_header.html.erb
+++ b/lab7/app/views/layouts/_header.html.erb
@@ -1,16 +1,48 @@
-<header>
-    <ul class="nav justify-content-center">
+
+<header class="d-flex flex-wrap align-items-center justify-content-between py-3 mb-4 border-bottom">
+      <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none w-auto">
+        My site
+      </a>
+
+      <ul class="nav justify-content-center">
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Active</a>
+          <%= link_to 'About Project', about_path, class: 'nav-link active', aria: { current: 'page' } %>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+          <%= link_to 'Create User', new_user_registration_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+          <%= link_to 'Show All Users', users_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+          <%= button_to "Destroy All Users", destroy_all_users_path, method: :delete, data: { confirm: 'Are you sure you want to delete all users?' }, class: 'btn ' %>
         </li>
-    </ul>
+        <% if user_signed_in? %>
+          <li class="nav-item">
+              <%= link_to 'New Post', new_post_path, class: 'nav-link' %>
+          </li>
+        <% end %>
+        <li class="nav-item">
+              <%= link_to 'Posts', posts_path, class: 'nav-link' %>
+        </li>
+      </ul>
+      <div class="row">
+        <div class="col-md-3 text-end">
+          <% if user_signed_in? %>
+            <div class="d-flex justify-content-end align-items-center">
+              <%= link_to 'Profile', user_path(current_user), class: 'btn btn-outline-secondary me-2' %>
+              <!-- Show logout button if user is signed in -->
+              <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: 'btn btn-outline-danger' %>
+            </div>
+          <% else %>
+            <div class="d-flex justify-content-end align-items-center">
+              <!-- Show login and sign-up buttons if user is not signed in -->
+              <%= link_to 'Login', new_user_session_path, class: 'btn btn-outline-primary me-2' %>
+              <%= link_to 'Sign-up', new_user_registration_path, class: 'btn btn-primary' %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+
+
 </header>
