--- a/lab7/app/views/users/show.html.erb
+++ b/lab7/app/views/users/show.html.erb
@@ -1,10 +1,15 @@
-<p style="color: green"><%= notice %></p>
+<h1>Welcome, <%= @user.email %></h1>
 
-<%= render @user %>
-
-<div>
-  <%= link_to "Edit this user", edit_user_path(@user) %> |
-  <%= link_to "Back to users", users_path %>
-
-  <%= button_to "Destroy this user", @user, method: :delete %>
-</div>
+<h2>Your Posts:</h2>
+<% if @posts.any? %>
+  <ul>
+    <% @posts.each do |post| %>
+      <li>
+        <%= link_to post.title, post_path(post) %> | 
+        <%= link_to 'Edit', edit_post_path(post) %>
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>You have no posts yet.</p>
+<% end %>
